--- a/views/setting.ejs
+++ b/views/setting.ejs
@@ -1,18 +1,18 @@
-<!-- views/signup.ejs -->
+<!-- views/setting.ejs -->
 <!doctype html>
 <html>
 <head>
 	<title></title>
 </head>
 <body>
-
 	<h1> 注册一个项目</h1>
-
 	<!-- show any messages that come back with authentication -->
-
-
 	<!-- LOGIN FORM -->
 	<form method="post">
+		<div >
+			<label>default</label>
+			<input type="text" name="default_link">
+		</div>
 		<div >
 			<label>wechat</label>
 			<input type="text"  name="wechat_link">
@@ -22,16 +22,15 @@
 			<input type="text" name="ios_link">
 		</div>
 		<div >
-			<label>用户名email</label>
-			<input type="text"  name="user_email">
+			<label>android</label>
+			<input type="text" name="android_link">
 		</div>
-
-		<button type="submit" >注册</button>
+		<div >
+			<label>项目名称</label>
+			<input type="text" name="project_name">
+		</div>
+		<button type="submit" >提交</button>
 	</form>
-
-<!-- 
-	<p>已注册？ <a href="/login">登录</a></p>
-	<p>或者去 <a href="/">主页</a>.</p> -->
-
+	<a href="/profile" >个人主页</a>
 </body>
 </html>
